feat: support packing and downloading task files
